Inmob-Salesforce/force-app/main/default/objects/Validate_Duplicates__mdt/Validate_Duplicates__mdt.object-meta.xml
<CustomObject>
    <label>Validate Duplicates</label>
    <pluralLabel>Validate Duplicates</pluralLabel>
</CustomObject>