Inmob-Salesforce/force-app/main/default/objects/Validate_Duplicates__mdt/fields/CI_Activo__c.field-meta.xml
<CustomField>
    <fullName>CI_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que valida si se aplica la validación de oportunidades duplicadas por Asesor.</description>
    <inlineHelpText>Campo que valida si se aplica la validación de oportunidades duplicadas por Asesor.</inlineHelpText>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>