Inmob-Salesforce/force-app/main/default/objects/Validate_Duplicates__mdt/fields/CI_Etapa__c.field-meta.xml
<CustomField>
    <fullName>CI_Etapa__c</fullName>
    <label>Etapa Oportunidad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>