Inmob-Salesforce/force-app/main/default/objects/Validate_Duplicates__mdt/fields/CI_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>CI_Proyecto__c</fullName>
    <label>Proyecto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>